--- a/src/LoginLink/index.css
+++ b/src/LoginLink/index.css
@@ -3,8 +3,15 @@ button{
     background-color: blue;
     padding: 18px;
     border-radius: 30px;
-    width: 50%;
+    width: 40%;
     margin-left: 20%;
     text-decoration: none;
     margin-bottom: 3%;
+}
+h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: xx-large;
+    font-weight: bold;
+    margin-left: 20%;
+    margin-bottom: 10%;
 }
